# erd_agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/erd_agent/: agent.py  scanner.py
src/erd_agent/parsers/: jpa_java.py
