[project]
name = "erd-agent"
version = "0.2.0"
description = "Analyze JPA(Java) entities and generate DBML for dbdiagram.io"
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "GitPython>=3.1.42",
  "javalang>=0.13.0",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "watchdog>=4.0.0",
  "openai>=1.0.0",  # Azure OpenAI 옵션 사용 시
]

[project.scripts]
erd-agent = "erd_agent.agent:app"

[tool.setuptools.packages.find]
where = ["src"]